tests/neg-custom-args/captures/scoped-caps2.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:5:23 ----------------------------------
5 |  val _: (x: C) => C = b // error
  |                       ^
  |                       Found:    (b : C => C)
  |                       Required: (x: C^) =>² C^²
  |
  |                       where:    =>  refers to a fresh root capability in the type of value b
  |                                 =>² refers to a fresh root capability in the type of value _$1
  |                                 ^   refers to the universal root capability
  |                                 ^²  refers to a root capability associated with the result type of (x: C^): C^²
  |
  |                       Note that the existential capture root in C^
  |                       cannot subsume the capability cap..
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:6:18 ----------------------------------
6 |  val _: C => C = a // error
  |                  ^
  |           Found:    (a : (x: C) => C)
  |           Required: C^ =>² C^²
  |
  |           where:    =>  refers to a fresh root capability in the type of value a
  |                     =>² refers to a fresh root capability in the type of value _$2
  |                     ^   refers to the universal root capability
  |                     ^²  refers to a fresh root capability classified as SharedCapability in the type of value _$2
  |
  |           Note that capability cap is not included in capture set {cap}.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:8:18 ----------------------------------
8 |  val _: C => C = (x: C) => a(x) // error
  |                  ^^^^^^^^^^^^^^
  |            Found:    (x: C^) ->{a} C^²
  |            Required: C^ => C^³
  |
  |            where:    => refers to a fresh root capability in the type of value _$4
  |                      ^  refers to the universal root capability
  |                      ^² refers to a root capability associated with the result type of (x: C^): C^²
  |                      ^³ refers to a fresh root capability classified as SharedCapability in the type of value _$4
  |
  |            Note that capability <cap of (x: C^): C^> is not included in capture set {cap}
  |            because <cap of (x: C^): C^> is not visible from cap in value _$4.
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:14:18 ---------------------------------
14 |  val _: C -> C = a // error
   |                  ^
   |          Found:    (a : (x: C) -> C)
   |          Required: C^ -> C^²
   |
   |          where:    ^  refers to the universal root capability
   |                    ^² refers to a fresh root capability classified as SharedCapability in the type of value _$6
   |
   |          Note that capability <cap of (x: C^): C^> is not included in capture set {cap}
   |          because <cap of (x: C^): C^> is not visible from cap in value _$6.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:15:23 ---------------------------------
15 |  val _: (x: C) -> C = (x: C) => b(x) // error
   |                       ^^^^^^^^^^^^^^
   |                       Found:    (x: C^) ->{b} C^²
   |                       Required: (x: C^) -> C^³
   |
   |                       where:    ^  refers to the universal root capability
   |                                 ^² refers to a root capability associated with the result type of (x: C^): C^²
   |                                 ^³ refers to a root capability associated with the result type of (x: C^): C^³
   |
   |                       Note that capability b is not included in capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scoped-caps2.scala:16:29 ---------------------------------
16 |  val _: C -> C = (x: C) => a(x) // error
   |                            ^^^^
   |           Found:    C^{x}
   |           Required: C^
   |
   |           where:    ^ refers to a fresh root capability classified as SharedCapability in the type of value _$8
   |
   |           Note that capability x is not included in capture set {cap}
   |           because (x : C) in enclosing function is not visible from cap in value _$8.
   |
   | longer explanation available when compiling with `-explain`
